send generic error code from api
no specific errors yet, but better than random throws
