# game-logic/src/types/api.ts
@@ -17,6 +17,9 @@ import type {
   IGetCardsByIdsResult,
   IGetAllPaginatedUserLobbiesResult,
 } from '@cards/db/build/select.queries';
+import type { FailedResult, SuccessfulResult } from 'paima-sdk/paima-mw-core';
+
+export type ApiResult<T> = SuccessfulResult<T> | Omit<FailedResult, 'errorMessage'>;
 
 export type LobbyRawResponse = {
   lobby: IGetLobbyByIdResult | null;
